@@ -1,2 +1,24 @@
 # JAVAFX
 PS10
+Description
+Design and Implement the Tip Calculator app
+Software
+JavaFX SDK 11.0.2 - https://openjfx.io/
+Scene Builder 11.0.0 - https://gluonhq.com/products/scene-builder/
+IntelliJ IDEA - https://www.jetbrains.com/idea/
+Instruction to set up - https://openjfx.io/openjfx/docs/#introduction
+For VM options: --module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml ;${PATH_TO_JAVAFX} - path to JavaFX library
+ 
+  
+   
+    
+     
+      
+ 
+  
+   
+![image](https://user-images.githubusercontent.com/95302587/144571691-cbe924d9-b2c3-4643-aaf6-126770e607a5.png)
+![image](https://user-images.githubusercontent.com/95302587/144571714-7a30ed90-dac8-4d20-a9e6-1787811ff8ba.png)
+
+
+
